popup z-index issue solved

--- a/src/App.css
+++ b/src/App.css
@@ -589,6 +589,7 @@ input#PortalUpload {
     align-items: center;
     justify-content: center;
     display:none;
+    z-index: 9999999;
 }
 .photograph-popup-outer.show {
     display: flex;
